@@ -893,6 +893,15 @@ usr/share/snmp/mibs/FOKUS-MIB.txt
 usr/share/snmp/mibs/FREEBSD-MIB.txt
 usr/share/snmp/mibs/RSTP-MIB.txt
 
+####### contents of /usr/share/syscons
+usr/share/syscons/fonts/
+usr/share/syscons/keymaps/
+usr/share/syscons/scrnmaps/
+
+####### contents of /usr/share/vt
+usr/share/vt/fonts/
+usr/share/vt/keymaps/
+
 ####### contents of /libexec/resolvconf
 libexec/resolvconf/dnsmasq
 libexec/resolvconf/libc
