@@ -14,6 +14,7 @@ Changes:
 - Add ability to mount exFAT disk.
 - Add samba local group.
 - Add ability to add tap device on bridge interface.
+- Add console fonts and keymaps.
 - Remove usesendfile on CIFS/SMB.
 - Change ZFS pool info reflected from zpool list.
 - Upgrade bash 4.3 to patch 42.
